--- a/src/Components/Pages/Projects/ProjectsCards/ProjectsCard.scss
+++ b/src/Components/Pages/Projects/ProjectsCards/ProjectsCard.scss
@@ -53,7 +53,7 @@
 
             &.project-cards-switch {
                 @media screen and (min-width: 600px) {
-                    justify-content: start;
+                    justify-content: flex-start;
                 }
 
             }
